<resources>
    <string name="app_name">MAD_PROJECT</string>
    <string name="location">Location</string>
    <string name="vehicle">vehicle</string>
    <string name="Driver">Driver</string>
    <string name="Payments">Payments</string>
    <string name="Driver_Selection">Driver Selection</string>
    <string name="Gender">Gender</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="Find_Driver">Find Driver</string>
    <string name="FIND_A_PARTNER">FIND A PARTNER</string>
    <string name="Pickup_location">Pickup location</string>
    <string name="Destination">Location</string>
    <string name="Number_Of_Passengers">Number Of Passengers</string>
    <string name="Male">Male</string>
    <string name="Find_partner">Find partner</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="register">register</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Create_a_new_account">Create a new account</string>
    <string name="app_name1">payment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Payment">Payment</string>
    <string name="Payment_Method">Payment Method</string>
    <string name="Credit_Debit_Card">Credit/Debit Card</string>
    <string name="PayPal">PayPal</string>
    <string name="Cash">Cash</string>
    <string name="Amount">Amount</string>
    <string name="PAY">PAY</string>
    <string name="REFUND">REFUND</string>
    <string name="LKR.000.00">LKR.000.00</string>
    <string name="Add_New_Card">Add New Card</string>
    <string name="Card_Number">Card Number</string>
    <string name="card_number">1234  7843  1237  1279</string>
    <string name="Expiry_Date">Expiry Date</string>
    <string name="CVV">CVV</string>
    <string name="Date">19/06/2023</string>
    <string name="cvv">678</string>
    <string name="Name">Name</string>
    <string name="John_Michael">John ichael</string>
    <string name="Add_Card">Add Card</string>
    <string name="vehicle_selection">Vehicle Selection</string>
    <string name="undo">UNDO</string>
    <string name="a_c">A/C</string>
    <string name="tuk">Tuk</string>
    <string name="suv">SUV</string>
    <string name="car">Car</string>
    <string name="van">Van</string>


</resources>